Updated package.json, added static/js/script.js to .gitignore, and excluded it from .npmignore for jitsu deployment

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "riff-designer",
   "description": "Audio fabrication software",
   "author": "Cole R Lawrence <cole@zombiehippie.com>",
-  "version": "0.0.1-2",
+  "version": "0.0.2-3",
   "dependencies": {
+    "coffee-script": "1.6.x",
     "connect": "1.8.x",
     "express": "2.5.x",
     "jade": "0.20.x",
@@ -11,17 +12,20 @@
     "socket.io": "0.8.x"
   },
   "devDependencies": {
-    "coffee-script": "1.6.x",
     "vows": "0.5.x",
     "wrench": "*",
     "mocha": "*",
     "should": "*"
   },
-  "engine": "node >= 0.6.6",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ZombieHippie/riff-designer.git"
+  },
   "subdomain": "riff",
   "scripts": {
     "start": "node server.js"
   },
+  "license": "MIT",
   "engines": {
     "node": "0.10.x"
   }
